<resources>
    <string name="app_name">Pbazaar Agent</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="internet_connection_error_message">Something went wrong Please check your Internet Connection and try again</string>
    <string name="no_internet_error_message">No Internet Connection found. Please turn on your network connection</string>
    <string name="network_operation_running_message">Connecting to Pbazaar</string>
    <string name="empty_input_field_error_message">Field can\'t be empty</string>
    <string name="passeword_mismatch_error_text">Password Mismatch</string>
    <string name="invalid_address_error_text">Invalid Address</string>
    <string name="district_load_failed_error_message">District load failed</string>
    <string name="registration_successfull_note">Registration Successful</string>
    <string name="pick_image_intent_text">Pick your option</string>
    <string name="image_upload_error_message">Image upload failed. Please check your internet connection and try again</string>
    <string name="image_uploading_message">Uploading image to Pbazaar</string>
    <string name="empty_textbox_error_meassage">Please provide all information</string>
    <string name="no_permission_text">Please provide all permissions</string>
    <string name="welcome_to_pbazaar_note">Welcome To pBazaar.com</string>
    <string name="post_success_message">Your post is successfully submitted</string>
    <string name="positive_post_success_dialog_button">Exit</string>
    <string name="negative_post_success_dialog_button">Post Another</string>
    <string name="invalid_referral_code_error_message">Invalid Referral Code given</string>
    <string name="share_referral_code">Share Referral Code</string>
    <string name="share_referral_code_message">Your referral code is: </string>
    <string name="share_using">Share Using</string>
    <string name="share_referral_intent_subject">Share Referral Code</string>
    <string name="empty_image_error_message">please upload a property picture</string>
    <string name="update_app_message">A new version of this app is released. Please update the app from Google Play Store</string>
    <string name="not_now">Not Now</string>
    <string name="ok">Ok</string>

    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>

    <string name="forgot_password_text">Forgot password?</string>
    <string name="request_password">Request Password</string>
    <string name="no_email_error_text">No email found</string>
    <string name="share">Share</string>
    <string name="cancel">Cancel</string>

    <string name="total_post_post_history">Total Post</string>
    <string name="successful_post_history">Successful:</string>
    <string name="check_in_progress_post_history">Check In Progress:</string>
    <string name="not_interested_post_history">Not Interested:</string>
    <string name="invalid_post_history">Invalid : </string>
    <string name="already_exists_post_history">Already Exists:</string>
    <string name="rent_out_post_history">Rent out : </string>
    <string name="sold_out_post_history">Sold out : </string>
    <string name="total_posts_history">Total posting history : </string>
    <string name="posts_this_week">Posting status of this week : </string>


    <string name="referral_code_nav_menu_item">Referral Code</string>
    <string name="post_history_nav_menu_item">Posting Status</string>
    <string name="payment_history_nav_menu_item">Payment History</string>
    <string name="post_product_nav_menu_item">Post New Property</string>
    <string name="forgot_password_note">If you have forgotten your password, you can reset it here</string>
    <string name="update">Update</string>
    <string name="agent_search_nav_menu_item">Agent Search</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="insert_client_phone_no">Insert Client Phone Number</string>
    <string name="phone">Phone No</string>
    <string name="submit">Submit</string>
    <string name="insert_client_phon_no">Insert client phone number</string>
    <string name="insert_agent_search_client">Insert Search Client Details</string>
    <string name="full_name">Full Name</string>
    <string name="add_search_client">Create Search Client</string>
    <string name="insert_client_requirements">Insert Client Requirements</string>
    <string name="min_budget">Minimum Budget</string>
    <string name="max_budget">Max Budget</string>
    <string name="incorrect_mobile_no">Please Insert a Valid Mobile No</string>

</resources>
