<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorWhite"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/standard_margin"
        android:text="@string/update_app_message"
        android:textSize="16sp" />

    <LinearLayout
        android:paddingBottom="@dimen/standard_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:padding="@dimen/small_margin"
            android:clickable="true"
            android:background="@drawable/text_button_background"
            android:id="@+id/text_view_cancel_update_force_update_dialog"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/not_now"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />

        <TextView
            android:padding="@dimen/small_margin"
            android:clickable="true"
            android:background="@drawable/text_button_background"
            android:id="@+id/text_view_confirm_update_force_update_dialog"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/ok"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />

    </LinearLayout>

</LinearLayout>