<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardUseCompatPadding="true"
    app:contentPadding="@dimen/standard_margin"
    tools:context="com.pbazaar.pbazaarforagent.ui.main.agent_search.AgentSearchFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:divider="@drawable/divider_standard_size"
        android:orientation="vertical"
        android:showDividers="middle">

        <!-- Dummy item to prevent AutoCompleteTextView from receiving focus -->
        <LinearLayout
            android:layout_width="0px"
            android:layout_height="0px"
            android:focusable="true"
            android:focusableInTouchMode="true" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/insert_client_phone_no"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/standard_margin">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_agent_phone_agent_search_fragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone"
                android:inputType="phone" />
        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/button_submit_client_phn_agent_search_fragment"
            style="@style/Button.Flat.Submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/standard_margin"
            android:text="@string/submit" />
    </LinearLayout>

</android.support.v7.widget.CardView>
